--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
         <label>
             Converter <b>de</b>
             <br>
-            <select>
-                <option>R$ Real Brasileiro</option>
-            </select>
+                <select class="currency-select-from">
+                    <option value="real">R$ Real Brasileiro</option>
+                    <option value="dolar">US$ Dólar Americano</option>
+                    <option value="euro">€ Euro</option>
+                    <option value="libra">£ Libra</option>
+                    <option value="bitcoin">₿ Bitcoin</option>
+                  </select>
         </label>
         <br>
         <label>
